@@ -15,6 +15,7 @@ depth: 1
 
  * Rectify previous fix for TableBlock becoming uneditable after save (Sage Abdullah)
  * Ensure that copying page correctly picks up the latest revision (Matt Westcott)
+ * Prevent lowercase conversions of IndexView column headers (Virag Jain)
 
 ### Documentation
 
